valid_tests/operators/test1.go
// Test 1: Unary operators
func main() {
    x := 10
    y := -x
    z := +x
    
    flag := true
    negated := !flag
}
