invalid_tests/declarations/test4.go
// Test 4: Invalid var syntax - missing identifier
func main() {
    var = 10
}
